[gd_scene load_steps=13 format=3 uid="uid://dbuy4f0gnmknk"]

[ext_resource type="PackedScene" uid="uid://34ex8vqdnd24" path="res://Assets 3D/TV.glb" id="1_c47rq"]
[ext_resource type="Script" uid="uid://doubluwx08ttd" path="res://Scenes/TV/Starter_TV_SCRIPT.gd" id="1_rlg0s"]
[ext_resource type="AudioStream" uid="uid://dmguoruy7376t" path="res://Sounds/SFX/TV/TV Static Sound.wav" id="2_j1raa"]
[ext_resource type="Script" uid="uid://tte8j0hm1k47" path="res://Scenes/Interactable Zone/interactable_zone_SCRIPT.gd" id="2_swlln"]
[ext_resource type="AudioStream" uid="uid://b6udpxab4iurc" path="res://Sounds/SFX/TV/TV Turn ON.wav" id="4_d1ihs"]
[ext_resource type="AudioStream" uid="uid://bvmjtqrv3mp5k" path="res://Sounds/SFX/TV/TV Turn Off.wav" id="5_lvish"]
[ext_resource type="FontFile" uid="uid://caid5g6x1thm" path="res://Fonts/Digital Clock/DS-DIGIB.TTF" id="7_qc576"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qc576"]
size = Vector3(0.5593262, 1.1914063, 0.32080078)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_rlg0s"]
points = PackedVector3Array(-0.42221132, 0.72650576, -0.47060934, 0.28919452, 1.3031615, 0.5873115, 0.3210777, 1.1105176, -0.36823627, 0.21526475, -0.010445356, 0.52005476, -0.444829, 1.2330674, 0.45720318, 0.21526475, -0.010445356, -0.5163438, -0.2077573, -0.010445356, 0.52005476, -0.2983, 1.3008876, -0.5432115, -0.2077573, -0.010445356, -0.5163438, 0.29098994, 1.3063413, -0.5865244, 0.29985386, 0.6242545, 0.58342826, -0.2983, 1.2808892, 0.5668316, 0.29985386, 0.6242545, -0.5797173, -0.44598648, 1.2348185, -0.45489946, -0.405403, 0.70260847, 0.40926954, -0.2983, 0.6466541, -0.5631206, 0.18778467, 1.3273573, 0.5696641, -0.2983, 0.6466541, 0.5668316, 0.29156604, 1.3280921, -0.56669575, -0.2983, 1.3008876, 0.5469225, -0.2983, 1.2808892, -0.5631206, 0.2911518, 1.3273346, 0.56975585, -0.42676252, 1.2572049, -0.45637655, 0.18808047, 1.3281147, -0.56660396, -0.4258535, 1.2556984, 0.45891896, 0.30967802, 1.2208519, -0.48062637, 0.3210777, 1.0894449, -0.36823627, -0.42385674, 1.2117538, -0.47281843)

[sub_resource type="ViewportTexture" id="ViewportTexture_hi7d2"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d1ihs"]
resource_local_to_scene = true
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_operator = 1
emission_texture = SubResource("ViewportTexture_hi7d2")

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_d1ihs"]
resource_local_to_scene = true
file = "res://Assets 2D/Videos/Static_TV_Vide.ogg"

[node name="TV Scene" type="Node3D"]
script = ExtResource("1_rlg0s")
Interact_Text = "Turn On / Off TV"

[node name="InteractableZone" type="Area3D" parent="." node_paths=PackedStringArray("Parent_Interactable_Object")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.18416217, 0, 0)
collision_layer = 256
collision_mask = 256
monitorable = false
script = ExtResource("2_swlln")
Parent_Interactable_Object = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractableZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.677124, 1.0065308, -0.4267578)
shape = SubResource("BoxShape3D_qc576")
debug_color = Color(0.9676674, 0, 0.46974695, 1)

[node name="Static_Sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5461354, 1.2132795, -0.44906908)
stream = ExtResource("2_j1raa")
volume_db = -25.0
unit_size = 20.0
max_db = -5.0
autoplay = true

[node name="Turn On Sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.36256862, 1.1866065, -0.5196407)
stream = ExtResource("4_d1ihs")
volume_db = -20.0

[node name="Turn OFF Sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.36196822, 1.1735673, -0.4770792)
stream = ExtResource("5_lvish")
volume_db = -20.0

[node name="TV2" parent="." instance=ExtResource("1_c47rq")]

[node name="StaticBody3D" type="StaticBody3D" parent="TV2/TV" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TV2/TV/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rlg0s")

[node name="TV Screen" parent="TV2" index="2"]
surface_material_override/0 = SubResource("StandardMaterial3D_d1ihs")

[node name="Flicker_Light" type="OmniLight3D" parent="TV2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.72241986, 1.018985, 0.12852098)
omni_range = 0.39738354
omni_attenuation = 0.5

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1280, 720)
size_2d_override_stretch = true
render_target_clear_mode = 2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.008056641
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 2.294)
stream = SubResource("VideoStreamTheora_d1ihs")
volume_db = -20.0
autoplay = true
loop = true
metadata/_edit_use_anchors_ = true

[node name="Monster_Camera_POV" type="Camera3D" parent="SubViewport"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0.39531004, 0.9999588, 0)
cull_mask = 3
fov = 90.0
far = 150.0

[node name="Hour_Time" type="Label3D" parent="."]
transform = Transform3D(-5.5950578e-09, 0, 0.128, 0, 0.128, 0, -0.128, 0, -5.5950578e-09, 0.29592896, 1.3574703, 0)
double_sided = false
texture_filter = 5
modulate = Color(0.59, 0.1062, 0.1062, 1)
text = "18 : 00"
font = ExtResource("7_qc576")
font_size = 100
outline_size = 0

[editable path="TV2"]
